# kobo

./: Cargo.toml  Dockerfile  README.md
configuration/: base.yaml
migrations/: 20230110061738_create_editors_table.sql  20230110070522_rename_password_column.sql  20230110084230_add_salt_to_editors.sql  20230110123641_remove_salt_from_users.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
