[package]
name = "kobo"
version = "0.1.0"
authors = ["Lavish Gambhir <lavish_gambhir@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "kobo"

[dependencies]
actix-web = "4.2.1"
tokio = { version = "1.23.0", features = ["full"] }
reqwest = "0.11.13"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
config = "0.13.3"
uuid = { version = "1.2.2", features = ["v4"] }
chrono = "0.4.23"
env_logger = "0.10.0"
log = "0.4.17"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]