[package]
name = "kobo"
version = "0.1.0"
authors = ["Lavish Gambhir <lavish_gambhir@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "kobo"

[dependencies]
actix-web = "4.2.1"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
config = "0.13.3"
uuid = { version = "1.2.2", features = ["v4"] }
chrono = "0.4.23"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
once_cell = "1.16.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.1"
unicode-segmentation = "1.10.0"
validator = "0.16.0"
fake = "~2.3.0"

[dev-dependencies]
claim = "0.5.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5.15"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]